globus-common (16.8-1+gt6.@distro@) @distro@; urgency=low

  * Replace docbook with asciidoc

 -- Globus Toolkit <support@globus.org>  Thu, 08 Sep 2016 11:22:34 -0400

globus-common (16.7-1+gt6.@distro@) @distro@; urgency=low

  * Update bug report URL

 -- Globus Toolkit <support@globus.org>  Sat, 20 Aug 2016 09:11:21 -0400

globus-common (16.6-1+gt6.@distro@) @distro@; urgency=low

  * Updates for running thread tests without installing

 -- Globus Toolkit <support@globus.org>  Tue, 16 Aug 2016 09:50:14 -0400

globus-common (16.5-1+gt6.@distro@) @distro@; urgency=low

  * don't redefine snprintf and vsnprintf when using mingw versions

 -- Globus Toolkit <support@globus.org>  Wed, 22 Jun 2016 16:52:57 -0500

globus-common (16.4-1+gt6.@distro@) @distro@; urgency=low

  * Spelling

 -- Globus Toolkit <support@globus.org>  Tue, 03 May 2016 16:28:11 -0400

globus-common (16.3-1+gt6.@distro@) @distro@; urgency=low

  * Thread pc files dlpreopen and dlopen variables

 -- Globus Toolkit <support@globus.org>  Thu, 07 Apr 2016 10:33:31 -0400

globus-common (16.2-1+gt6.@distro@) @distro@; urgency=low

  * Fix missing doxygen comment header

 -- Globus Toolkit <support@globus.org>  Tue, 26 Jan 2016 09:52:14 -0500

globus-common (16.1-1+gt6.@distro@) @distro@; urgency=low

  * fix windows setenv impl

 -- Globus Toolkit <support@globus.org>  Fri, 11 Dec 2015 19:49:18 -0600

globus-common (16.0-1+gt6.@distro@) @distro@; urgency=low

  * Add globus_extension_get_module_version

 -- Globus Toolkit <support@globus.org>  Fri, 23 Oct 2015 15:46:36 -0500

globus-common (15.31-1+gt6.@distro@) @distro@; urgency=low

  * Fix in-tree run of GRAM tests by not having Config.pm in the perl5lib dir

 -- Globus Toolkit <support@globus.org>  Wed, 29 Jul 2015 16:17:20 -0400

globus-common (15.30-1+gt6.@distro@) @distro@; urgency=low

  * Make globus-version executable during build time

 -- Globus Toolkit <support@globus.org>  Fri, 05 Jun 2015 10:51:32 -0400
