@@ -21,7 +21,9 @@ check_PROGRAMS = \
     fifo_test \
     globus_args_scan_test \
     globus_error_construct_string_test \
+    globus_eval_path_test \
     globus_libc_setenv_test \
+    globus_location_test \
     globus_url_test \
     handle_table_test \
     hash_test \
@@ -40,5 +42,22 @@ LOG_COMPILER = $(LIBTOOL)
 AM_LOG_FLAGS = --mode=execute \
 		$(thread_test_windows_LDFLAGS) \
 		$(thread_test_pthread_LDFLAGS)
+
+globus_location_test_CPPFLAGS = $(AM_CPPFLAGS) -DGLOBUS_LOCATION=\"$(prefix)\"
+globus_eval_path_test_CPPFLAGS = $(AM_CPPFLAGS) \
+	-Dprefix=\"$(prefix)\" \
+        -Dexec_prefix=\"$(exec_prefix)\" \
+        -Dsbindir=\"$(sbindir)\" \
+        -Dbindir=\"$(bindir)\" \
+        -Dlibdir=\"$(libdir)\" \
+        -Dlibexecdir=\"$(libexecdir)\" \
+        -Dincludedir=\"$(includedir)\" \
+        -Ddatarootdir=\"$(datarootdir)\" \
+        -Ddatadir=\"$(datadir)\" \
+        -Dmandir=\"$(mandir)\" \
+        -Dsysconfdir=\"$(sysconfdir)\" \
+        -Dsharedstatedir=\"$(sharedstatedir)\" \
+        -Dlocalstatedir=\"$(localstatedir)\" \
+        -Dperlmoduledir=\"$(perlmoduledir)\"
 
 EXTRA_DIST = globus_test_tap.h thread_test.c
