@@ -13,8 +13,8 @@
 
 Name:		globus-common
 %global _name %(tr - _ <<< %{name})
-Version:	16.8
-Release:	2%{?dist}
+Version:	16.9
+Release:	1%{?dist}
 Vendor:		Globus Support
 Summary:	Globus Toolkit - Common Library
 
@@ -252,6 +252,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_docdir}/%{name}-%{version}/html/*
 
 %changelog
+* Fri Jan 06 2017 Globus Toolkit <support@globus.org> - 16.9-1
+- Fix crash in globus_eval_path
+
 * Thu Sep 08 2016 Globus Toolkit <support@globus.org> - 16.8-2
 - Rebuild after changes for el.5 with openssl101e
 
