@@ -1,3 +1,9 @@
+globus-common (16.9-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix crash in globus_eval_path
+
+ -- Globus Toolkit <support@globus.org>  Fri, 06 Jan 2017 17:10:04 -0500
+
 globus-common (16.8-1+gt6.@distro@) @distro@; urgency=low
 
   * Replace docbook with asciidoc
